--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:4310"
+        
+      }
+    }
+  },
+  "https_port": 4310,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,5 +16,4 @@
     }
   },
   "ConnectionString": "User Id=proyectodesoftware;Password=proyectodesoftware;Server=localhost;Port=5441;Database=proyectodesoftware;Integrated Security=true;Pooling=true;"
-
 }
